--- a/assets/view/html/Cadastro.html
+++ b/assets/view/html/Cadastro.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -11,12 +12,11 @@
     />
     <title>BattleFRONT - Cadastro</title>
   </head>
-
   <body>
     <header>
       <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top pt-1">
         <section class="container-fluid">
-          <a class="navbar-brand" href="#">BattleFRONT</a>
+          <a class="navbar-brand font-monospace" href="#">BattleFRONT</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -34,17 +34,23 @@
           >
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active d-flex justify-content-end" href="#"
+                <a
+                  class="nav-link active d-flex justify-content-end"
+                  href="./produtos.html"
                   >Serviços</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link active d-flex justify-content-end" href="#"
+                <a
+                  class="nav-link active d-flex justify-content-end"
+                  href="./Cadastro.html"
                   >Cadastro</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link active d-flex justify-content-end" href="#"
+                <a
+                  class="nav-link active d-flex justify-content-end"
+                  href="./Login.html"
                   >Login</a
                 >
               </li>
@@ -58,7 +64,8 @@
       <section>
         <div class="col-md-9 col-sm9">
           <h3 class="text-center">Cadastrar Usuário:</h3>
-          <form name="formUsuarios" method="post" action="" onsubmit=""></form><br>
+          <form name="formUsuarios" method="post" action="" onsubmit=""></form>
+          <br />
 
           <label for="">Nome:</label><br />
           <input
@@ -85,7 +92,8 @@
           <input
             type="password"
             name="txtSenha1"
-            class="form-control" placeholder="Digite uma senha"
+            class="form-control"
+            placeholder="Digite uma senha"
             size="30"
             maxlength="30"
           /><br />
@@ -94,7 +102,8 @@
           <input
             type="password"
             name="txtSenha2"
-            class="form-control" placeholder="Repita a senha"
+            class="form-control"
+            placeholder="Repita a senha"
             size="30"
             maxlength="30"
           /><br />
@@ -111,9 +120,19 @@
 
           <label for="">CEP:</label><br />
           <div class="input-group mb-3">
-            <input type="text" class="form-control" placeholder="Digite somente números">
+            <input
+              type="text"
+              class="form-control"
+              placeholder="Digite somente números"
+            />
             <div class="input-group-append">
-              <button class="btn btn-outline-secondary btn-outline-success" type="button" id="button-addon2">Buscar</button>
+              <button
+                class="btn btn-outline-secondary btn-outline-success"
+                type="button"
+                id="button-addon2"
+              >
+                Buscar
+              </button>
             </div>
           </div>
 
@@ -176,16 +195,14 @@
             name="btnSubmitUsuario"
             class="btn btn-primary w-100 my-4"
           >
-            Cadastrar
-          </button><br><br><br><br>
+            Cadastrar</button
+          ><br /><br /><br /><br />
         </div>
       </section>
     </main>
 
-    <footer class="fixed-bottom bg-light p-3 text-center">
-      <p class="m-0"><a> BattleFRONT &#169; - 2022 - all rights reserved</a
-        >
-      </p>
+    <footer class="fixed-bottom bg-light p-3 text-center font-monospace">
+      <p class="m-0"><a> BattleFRONT &#169; - 2022 - all rights reserved</a></p>
     </footer>
   </body>
 
