--- a/assets/view/html/Login.html
+++ b/assets/view/html/Login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -35,17 +35,23 @@
           >
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active d-flex justify-content-end" href="#"
+                <a
+                  class="nav-link active d-flex justify-content-end"
+                  href="./produtos.html"
                   >Serviços</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link active d-flex justify-content-end" href="#"
+                <a
+                  class="nav-link active d-flex justify-content-end"
+                  href="./Cadastro.html"
                   >Cadastro</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link active d-flex justify-content-end" href="#"
+                <a
+                  class="nav-link active d-flex justify-content-end"
+                  href="./Login.html"
                   >Login</a
                 >
               </li>
@@ -83,33 +89,29 @@
             maxlength="30"
             placeholder="Digite sua senha"
           /><br />
-          
+
           <button
-          type="submit"
-          name="btnSubmitUsuario"
-          class="btn btn-primary w-50"
+            type="submit"
+            name="btnSubmitUsuario"
+            class="btn btn-primary w-50"
           >
-          Entrar
+            Entrar
           </button>
-          
+
           <a href="#" id="" class="text-primary p-3">Esqueceu sua senha?</a
           ><br /><br />
-
         </div>
       </section>
     </main>
 
     <footer class="fixed-bottom bg-light p-3 text-center">
-      <p class="m-0"><a> BattleFRONT &#169; - 2022 - all rights reserved</a
-        >
-      </p>
+      <p class="m-0"><a> BattleFRONT &#169; - 2022 - all rights reserved</a></p>
     </footer>
 
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
   </body>
-
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-    crossorigin="anonymous"
-  ></script>
 </html>
