--- a/assets/view/html/Cadastro.html
+++ b/assets/view/html/Cadastro.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="../img/bfront.png" type="image/x-icon">
+    <link rel="stylesheet" href="../css/style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -15,10 +17,14 @@
   <body>
     <header>
       <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top pt-1">
-        <section class="container-fluid">
-          <a class="navbar-brand font-monospace" href="#">BattleFRONT</a>
+        <div class="container-fluid ms-3">
+          <a
+            class="navbar-brand font-monospace fw-bold"
+            href="../../../index.html"
+            >BattleFRONT</a
+          >
           <button
-            class="navbar-toggler"
+            class="navbar-toggler me-2"
             type="button"
             data-bs-toggle="collapse"
             data-bs-target="#navbarNavAltMarkup"
@@ -29,40 +35,47 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div
-            class="collapse navbar-collapse justify-content-end"
+            class="collapse navbar-collapse justify-content-end me-3"
             id="navbarNavAltMarkup"
           >
             <ul class="navbar-nav">
               <li class="nav-item">
                 <a
-                  class="nav-link active d-flex justify-content-end"
+                  class="nav-link active d-flex justify-content-center"
                   href="./produtos.html"
                   >Serviços</a
                 >
               </li>
               <li class="nav-item">
                 <a
-                  class="nav-link active d-flex justify-content-end"
+                  class="nav-link active d-flex justify-content-center"
+                  href="./contato.html"
+                  >Contato</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link active d-flex justify-content-center"
                   href="./Cadastro.html"
                   >Cadastro</a
                 >
               </li>
               <li class="nav-item">
                 <a
-                  class="nav-link active d-flex justify-content-end"
+                  class="nav-link active d-flex justify-content-center"
                   href="./Login.html"
                   >Login</a
                 >
               </li>
             </ul>
           </div>
-        </section>
+        </div>
       </nav>
     </header>
 
-    <main class="container pt-5 mt-5 pagination justify-content-center">
-      <section>
-        <div class="col-md-9 col-sm9">
+    <main class="container p-0 mt-5 pagination justify-content-center">
+      <section class="row">
+        <div class="col-md-10 col-sm9">
           <h3 class="text-center">Cadastrar Usuário:</h3>
           <form name="formUsuarios" method="post" action="" onsubmit=""></form>
           <br />
@@ -201,14 +214,14 @@
       </section>
     </main>
 
-    <footer class="fixed-bottom bg-light p-3 text-center font-monospace">
+    <footer class="bg-light p-3 text-center font-monospace">
       <p class="m-0"><a> BattleFRONT &#169; - 2022 - all rights reserved</a></p>
     </footer>
-  </body>
 
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-    crossorigin="anonymous"
-  ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
