--- a/assets/view/html/contato.html
+++ b/assets/view/html/contato.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="../img/bfront.png" type="image/x-icon" />
     <link rel="stylesheet" href="../css/style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -15,9 +16,11 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top pt-1">
         <div class="container-fluid ms-3">
-          <a class="navbar-brand font-monospace fw-bold" href="#"
+          <a
+            class="navbar-brand font-monospace fw-bold"
+            href="../../../index.html"
             >BattleFRONT</a
           >
           <button
@@ -41,6 +44,13 @@
                   class="nav-link active d-flex justify-content-center"
                   href="./produtos.html"
                   >Serviços</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link active d-flex justify-content-center"
+                  href="./contato.html"
+                  >Contato</a
                 >
               </li>
               <li class="nav-item">
@@ -148,54 +158,10 @@
       </form>
     </main>
 
-    <footer class="">
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid ms-3">
-          <a class="navbar-brand font-monospace" href="#"
-            >BattleFRONT &#169; - 2022 - all rights reserved</a
-          >
-          <button
-            class="navbar-toggler me-1"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNav"
-            aria-controls="navbarNav"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div
-            class="collapse navbar-collapse justify-content-end me-3"
-            id="navbarNav"
-          >
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a
-                  class="nav-link active d-flex justify-content-center"
-                  href="#"
-                  >Recuperação de Senha</a
-                >
-              </li>
-              <li class="nav-item">
-                <a
-                  class="nav-link active d-flex justify-content-center"
-                  href="#"
-                  >Contato</a
-                >
-              </li>
-              <li class="nav-item">
-                <a
-                  class="nav-link active d-flex justify-content-center"
-                  href="#"
-                  >Quem somos nós</a
-                >
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
+    <footer class="fixed-bottom bg-light p-3 text-center font-monospace">
+      <p class="m-0"><a> BattleFRONT &#169; - 2022 - all rights reserved</a></p>
     </footer>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
