--- a/assets/view/html/produtos.html
+++ b/assets/view/html/produtos.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="../img/bfront.png" type="image/x-icon">
+    <link rel="stylesheet" href="../css/style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -12,12 +14,13 @@
     />
     <title>BattleFRONT</title>
   </head>
-
   <body>
     <header>
       <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top pt-1">
         <div class="container-fluid ms-3">
-          <a class="navbar-brand font-monospace fw-bold" href="#"
+          <a
+            class="navbar-brand font-monospace fw-bold"
+            href="../../../index.html"
             >BattleFRONT</a
           >
           <button
@@ -41,6 +44,13 @@
                   class="nav-link active d-flex justify-content-center"
                   href="./produtos.html"
                   >Serviços</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link active d-flex justify-content-center"
+                  href="./contato.html"
+                  >Contato</a
                 >
               </li>
               <li class="nav-item">
@@ -96,11 +106,11 @@
         <div class="row row-cols-1 row-cols-md-3 g-4 m-4">
           <article class="col">
             <div
-              class="card-body border border-secondary border border-4 rounded-1 shadow p-3 mb-0 bg-body rounded"
+              class="card-body border border-secondary border border-4 rounded-1 shadow p-3 mb-0 bg-body rounded card-largura"
             >
               <img
                 src="../img/appDevelopment.png"
-                class="card-img-top image fluid"
+                class="card-img-top image fluid card-posicao-imagem"
                 alt="App Development"
               />
               <div class="card p-2">
@@ -119,11 +129,11 @@
           </article>
           <article class="col">
             <div
-              class="card-body border border-secondary border border-4 rounded-1 shadow p-3 mb-0 bg-body rounded"
+              class="card-body border border-secondary border border-4 rounded-1 shadow p-3 mb-0 bg-body rounded card-largura"
             >
               <img
                 src="../img/onlineEducation.png"
-                class="card-img-top image fluid"
+                class="card-img-top image fluid card-posicao-imagem"
                 alt="Studying"
               />
               <div class="card p-2">
@@ -142,11 +152,11 @@
           </article>
           <article class="col">
             <div
-              class="card-body border border-secondary border border-4 rounded-1 shadow p-3 mb-0 bg-body rounded"
+              class="card-body border border-secondary border border-4 rounded-1 shadow p-3 mb-0 bg-body rounded card-largura"
             >
               <img
                 src="../img/coding.png"
-                class="card-img-top image fluid"
+                class="card-img-top image fluid card-posicao-imagem"
                 alt="Coding"
               />
               <div class="card p-2">
@@ -168,54 +178,10 @@
       </section>
     </main>
 
-    <footer>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid ms-2">
-          <a class="navbar-brand font-monospace" href="#"
-            >BattleFRONT &#169; - 2022 - all rights reserved</a
-          >
-          <button
-            class="navbar-toggler me-1"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNav"
-            aria-controls="navbarNav"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div
-            class="collapse navbar-collapse justify-content-end me-3"
-            id="navbarNav"
-          >
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a
-                  class="nav-link active d-flex justify-content-center"
-                  href="#"
-                  >Recuperação de Senha</a
-                >
-              </li>
-              <li class="nav-item">
-                <a
-                  class="nav-link active d-flex justify-content-center"
-                  href="#"
-                  >Contato</a
-                >
-              </li>
-              <li class="nav-item">
-                <a
-                  class="nav-link active d-flex justify-content-center"
-                  href="#"
-                  >Quem somos nós</a
-                >
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
+    <footer class="bg-light p-3 text-center font-monospace">
+      <p class="m-0"><a> BattleFRONT &#169; - 2022 - all rights reserved</a></p>
     </footer>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
