--- a/assets/view/html/contato.html
+++ b/assets/view/html/contato.html
@@ -6,17 +6,18 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="../css/style.css" />
+	<link rel="icon" type="image/x-icon" href="../img/img_logo.png">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
 	</script>
-	<title>BattleFRONT</title>
+	<title>BattleFRONT - Quem somos nós</title>
 </head>
 
 <body>
 	<header>
-		<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+		<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top pt-1">
 			<div class="container-fluid ms-3">
 				<a class="navbar-brand font-monospace fw-bold" href="#">BattleFRONT</a>
 				<button class="navbar-toggler me-2" type="button" data-bs-toggle="collapse"
@@ -35,6 +36,9 @@
 						<li class="nav-item">
 							<a class="nav-link active d-flex justify-content-center" href="#">log-in</a>
 						</li>
+						<li class="nav-item">
+							<a class="nav-link active d-flex justify-content-center" href="#">Contato</a>
+						</li>
 					</ul>
 				</div>
 			</div>
@@ -42,77 +46,63 @@
 	</header>
 
 	<main>
-		<form>
-			<fieldset class="container border border-dark rounded shadow p-5 mb-4 mt-5 bg-white rounded" id="fieldset">
-				<h5>Por favor, para entrar em contato, nos informe os dados a seguir:</h5>
-				<form class="form-row justify">
-					<div class="col-sm-5 my-3">
-						<label class="sr-only" for="inlineFormInputName">Nome</label>
-						<input type="text" class="form-control shadow-sm rounded" id="inlineFormInputName" required
-							placeholder="Fulano">
-					</div>
-					<div class="col-sm-5 my-3">
-						<label class="sr-only" for="inlineFormInputTel">Telefone</label>
-						<input type="tel" class="form-control shadow-sm rounded" id="inlineFormInputTel" required
-							placeholder="(xx) xxxxx-xxxx">
-					</div>
-					<div class="col-sm-5 my-3">
-						<label class="sr-only" for="exampleFormControlInput1">Endereço de email</label>
-						<input type="email" class="form-control shadow-sm rounded" id="inlineFormInputEmail1" required
-							placeholder="nome@exemplo.com">
-					</div>
-					<div class="col-sm-5 my-3">
-						<label for="exampleFormControlSelect1">Selecione o motivo do contato?</label>
-						<select class="form-control shadow-sm rounded" id="exampleFormControlSelect">
-							<option>Produtos</option>
-							<option>Assinatura</option>
-							<option>Críticas</option>
-							<option>Sugestões</option>
-							<option>Outros</option>
-						</select>
-						<div class="col-sm-15 my-3">
-							<label for="exampleFormControlTextarea1">Conte-nos detalhadamente qual a razão do contato</label>
-							<textarea class="form-control shadow-sm rounded" id="exampleFormControlTextarea"
-								rows="5"></textarea>
+	</main>
+	<section class="m-5 text-center">
+		<h2>Nossa equipe é formada pelos seguintes estudantes da T14 da Resilia:</h2>
+	</section>
+		<section class="container d-flex justify content-center">
+			<!--Alteração de margin e padding é aqui-->
+			<div class="row">
+				<article class="col">
+					<div
+						class="card-body border border-secondary border border-4 rounded-1 shadow p-3 mb-0 bg-body rounded">
+						<img src="" class="card-img-top image fluid" alt="">
+						<div class="card p-2">
+							<h4 class="card-title text-center">Victor Del Duca</h4>
+							<a href="https://github.com/Vitor-DelDuca" class="btn" role="button">Github</a>
+							<a href="" class="btn" role="button">LinkedIn</a>
 						</div>
 					</div>
-					<div class="form-group">
-						<label for="exampleFormControlFile1">Selecione um arquivo</label>
-						<input type="file" class="form-control-file" id="exampleFormControlFile">
+				</article>
+				<article class="col">
+					<div
+						class="card-body border border-secondary border border-4 rounded-1 shadow p-3 mb-0 bg-body rounded">
+						<img src="" class="card-img-top image fluid" alt="">
+						<div class="card p-2">
+							<h4 class="card-title text-center">Hadassa Moraes</h4>
+							<a href="https://github.com/hadmoraes" class="btn" role="button">Github</a>
+							<a href="" class="btn" role="button">LinkedIn</a>
+						</div>
 					</div>
-					<div class="col-sm-15 my-3">
-						<button type="submit" class="btn btn-secondary shadow-sm rounded">Enviar</button>
+				</article>
+				<article class="col">
+					<div
+						class="card-body border border-secondary border border-4 rounded-1 shadow p-3 mb-0 bg-body rounded">
+						<img src="" class="card-img-top image fluid" alt="">
+						<div class="card p-2">
+							<h4 class="card-title text-center">Ytallo Bruno</h4>
+							<a href="https://github.com/ytallobruno" class="btn" role="button">Github</a>
+							<a href="" class="btn" role="button">LinkedIn</a>
+						</div>
 					</div>
-				</form>
-			</fieldset>
-
-			</fieldset>
-		</form>
+				</article>
+				<article class="col">
+					<div
+						class="card-body border border-secondary border border-4 rounded-1 shadow p-3 mb-0 bg-body rounded">
+						<img src="" class="card-img-top image fluid" alt="">
+						<div class="card p-2">
+							<h4 class="card-title text-center">Christopher Mamed</h4>
+							<a href="https://github.com/chrismamed" class="btn" role="button">Github</a>
+							<a href="https://www.linkedin.com/in/christopher-mamed-407485139/" class="btn" role="button">LinkedIn</a>
+						</div>
+					</div>
+				</article>
+			</div>
+		</section>
 	</main>
 
-	<footer class="">
-		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-			<div class="container-fluid ms-3">
-				<a class="navbar-brand font-monospace" href="#">BattleFRONT &#169; - 2022 - all rights reserved</a>
-				<button class="navbar-toggler me-1" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-					aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-					<span class="navbar-toggler-icon"></span>
-				</button>
-				<div class="collapse navbar-collapse justify-content-end me-3" id="navbarNav">
-					<ul class="navbar-nav">
-						<li class="nav-item">
-							<a class="nav-link active d-flex justify-content-center" href="#">Recuperação de Senha</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link active d-flex justify-content-center" href="#">Contato</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link active d-flex justify-content-center" href="#">Quem somos nós</a>
-						</li>
-					</ul>
-				</div>
-			</div>
-		</nav>
+	<footer class="fixed-bottom bg-light p-1 text-center">
+		<p class="m-0"><a> BattleFRONT &#169; - 2022 - all rights reserved</a></p>
 	</footer>
 </body>
 
