--- a/assets/view/html/produtos.html
+++ b/assets/view/html/produtos.html
@@ -5,16 +5,16 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/x-icon" href="../img/img_logo.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
   </script>
-  <title>BattleFRONT</title>
+  <title>BattleFRONT - Produtos</title>
 </head>
 
 <body>
-
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top pt-1">
       <div class="container-fluid ms-3">
@@ -34,6 +34,9 @@
             <li class="nav-item">
               <a class="nav-link active d-flex justify-content-center" href="#">log-in</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link active d-flex justify-content-center" href="#">Contato</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -45,16 +48,15 @@
       <!--Alteração de margin e padding é aqui-->
       <h2 class="subtitle p-4 font-monospace fw-bold text-decoration-underline fs-1">Conheça nossos planos:
       </h2>
-      <p class="description fs-5">Para utilizar a plataforma é necessário selecionar um dos planos abaixo e realizar o
+      <p class="fs-5">Para utilizar a plataforma é necessário selecionar um dos planos abaixo e realizar o
         cadastro. Somente assim podemos personalizar o seu plano de criação.</p>
-      <p class="description fs-5">Contamos com uma excelente interface, desenvolvida especialmente para o dev que está
+      <p class="fs-5">Contamos com uma excelente interface, desenvolvida especialmente para o dev que está
         começando agora.
-        <p class="description fs-5">Como?
-          <p class="description fs-5">O nosso modelo de estudos identifica os erros semânticos e modifica sua cor, a fim
+      <p class="fs-5">Como?</p>
+      <p class="fs-5">O nosso modelo de estudos identifica os erros semânticos e modifica sua cor, a fim
             de que você possa analisar.</p>
-          <p class="description fs-5">Junto a isso, o próprio sistema fornece sugestões se você estiver com dificuldades
+      <p class="fs-5">Junto a isso, o próprio sistema fornece sugestões se você estiver com dificuldades
             em seguir as instruções do exercício.</p>
-        </p>
     </section>
     <section class="product-cards mt-5 mb-2">
       <!--Alteração de margin e padding é aqui-->
@@ -83,7 +85,7 @@
                 Programação. Contém: 3 projetos exclusivos para seu portfólio + 2 e-books.
               </p>
               <a href="#" class="btn btn-secondary">Escolher</a>
-              
+
             </div>
           </div>
         </article>
@@ -104,29 +106,8 @@
     </section>
   </main>
 
-  <footer>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container-fluid ms-2">
-        <a class="navbar-brand font-monospace" href="#">BattleFRONT &#169; - 2022 - all rights reserved</a>
-        <button class="navbar-toggler me-1" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse justify-content-end me-3" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active d-flex justify-content-center" href="#">Recuperação de Senha</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active d-flex justify-content-center" href="#">Contato</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active d-flex justify-content-center" href="#">Quem somos nós</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+  <footer class="fixed-bottom bg-light p-1 text-center">
+    <p class="m-0"><a> BattleFRONT &#169; - 2022 - all rights reserved</a></p>
   </footer>
 </body>
 
