--- a/assets/view/html/RecuperacaoSenha.html
+++ b/assets/view/html/RecuperacaoSenha.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -47,12 +48,25 @@
         <input type="email" name="txtUsuario" class="form-control text-center" id="email" size="50" maxlength="50"
           aria-describedby="emailHelp" placeholder="nome@exemplo.com" /><br />
 
-        <button type="submit" name="btnSubmitUsuario" class="btn btn-primary w-50" id="btn-recuperaSenha">
+        <button type="submit" name="btnSubmitUsuario" class="btn btn-primary w-50" id="btn-submit">
           Enviar</button>
 
 
         <a href="./Cadastro.html" id="" class="text-primary p-3">Cadastrar Usuário</a>
 
+      </div>
+
+      <div class="alert alert-success" id="msg-sucesso" role="alert" hidden>
+        <h4 class="alert-heading">Sua senha foi redefinida com sucesso!</h4>
+        <hr>
+        <p>Cheque seu e-mail para acessar sua nova senha e tente fazer o login novamente.</p>
+      </div>
+
+
+      <div class="alert alert-danger" id="msg-erro" role="alert" hidden>
+        <h4 class="alert-heading">Seu e-mail não é valido!</h4>
+        <hr>
+        <p>Por favor, insira um email válido e tente novamente.</p>
       </div>
     </section>
   </main>
@@ -71,5 +85,5 @@
   <script src="../../controller/js/inputController.js"></script>
 
 </body>
-</html>
 
+</html>
