--- a/assets/view/html/RecuperacaoSenha.html
+++ b/assets/view/html/RecuperacaoSenha.html
@@ -48,7 +48,7 @@
         <input type="email" name="txtUsuario" class="form-control text-center" id="email" size="50" maxlength="50"
           aria-describedby="emailHelp" placeholder="nome@exemplo.com" /><br />
 
-        <button type="submit" name="btnSubmitUsuario" class="btn btn-primary w-50" id="btn-submit">
+        <button type="submit" name="btnSubmitUsuario" class="btn btn-primary w-50" id="btn-submit" disabled>
           Enviar</button>
 
 
@@ -83,7 +83,7 @@
   <script src="../../models/js/emailModel.js"></script>
   <script src="../../view/js/manipuladorDom.js"></script>
   <script src="../../controller/js/inputController.js"></script>
-
+  <script src="../../controller/js/msgController.js"></script>
 </body>
 
 </html>
