--- a/assets/view/css/style.css
+++ b/assets/view/css/style.css
@@ -110,13 +110,24 @@ body {
   font-size: 1.5rem;
 }
 
-.card-largura {
+.card-externo {
+  margin: 1rem;
+  height: 25rem;
+  min-width: 20rem;
   max-width: 25rem;
+  border-radius: 10px;
+  border: 4px solid #dee2e6;
+  box-shadow: 0 .5rem 1rem rgba(0,0,0,0.2);
+}
+
+.card-interno {
+  /* height: 15rem; */
+  min-width: 15rem;
 }
 
 .card-posicao-imagem {
   object-fit: contain;
-  height: 200px;
+  height: 150px;
 }
 
 /* CADASTRO */
